<resources>
    <string name="app_name">Коропенко Дмитрий</string>

    <string name="ff_medium">24sp</string>

    <!--EditText's hints-->
    <string name="hint_mobile">Мобильный</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_vk">Профиль в VK</string>
    <string name="hint_github">Репозиторий</string>
    <string name="hint_about">О себе</string>
    <string name="hint_login">EMAIL</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_search">Поиск</string>

    <!--Drawable menu-->
    <string name="menu_my_profile">Мой профиль</string>
    <string name="menu_my_contacts">Контакты</string>
    <string name="menu_exit">Выход</string>

    <!--Временный текст для информации-->
    <string name="my_profile_name">Коропенко Дмитрий</string>
    <string name="my_profile_mail">nikotin13@mail.ru</string>

    <!--Работа с загрузкой фото для аватара-->
    <string name="avatar_load_info">Загрузите фотографию профиля</string>
    <string name="avatar_load_from_gallary">Загрузить из галареи</string>
    <string name="avatar_load_from_camera">Сфотографировать</string>
    <string name="avatar_cancel">Отмена</string>
    <string name="avatar_select">Выберите фото</string>
    <string name="avatar_synchronised">Фото синхронизировано с сервером</string>

    <!--Работа с intent-->
    <string name="intent_error_open_message">Извините, невозможно открыть приложение</string>
    <string name="intent_need_permission">Для работы необходимо дать разрешения</string>

    <!--Экран входа-->
    <string name="login_forgot_password">Забыли пароль</string>
    <string name="login_btn">Войти</string>
    <string name="login_header_text">ВОЙТИ</string>

    <!--Ошибки-->
    <string name="error_user_phone_message">Некорректный номер</string>
    <string name="error_user_mail_message">Некорректный E-mail.</string>
    <string name="error_user_vk_message">Некорректный адрес страницы ВК.</string>
    <string name="error_user_github_message">Некорректный адрес git аккаунта.</string>
    <string name="error_can_not_enter">Нет подключения. Невозможно открыть программу.</string>
    <string name="error_wrong_user_or_password">Неверный логин или пароль</string>
    <string name="error_server_not_response">Сервер недоступен</string>
    <string name="error_magic">Неизвестная ошибка</string>
    <string name="error_synchro_photo">Ошибка синхронизации фотографии. Попробуйте позднее</string>
    <string name="error_load_users">Спосок пользователей не может быть загружен</string>
    <string name="error_enter_with_network_dates">Невозможно загрузить данные с сервера.</string>
    <string name="error_write_to_db">Извините. Ошибка записи данных. Попробуйте позже.</string>
    <string name="menu_calendar">Календарь</string>
    <string name="menu_todo_list">Список дел</string>
    <string name="menu_chat">чат</string>
</resources>
