<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.softdesign.devintensive.ui.activities.LogInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/spacing_72"
        android:layout_marginRight="@dimen/spacing_72"
        android:background="@color/white">

        <View
            android:layout_width="3dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/spacing_28"
            android:background="@color/login_main_txt"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/spacing_28">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_header_text"
                android:textColor="@color/login_main_txt"
                android:textSize="@dimen/font_size_20"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16">

                <android.support.design.widget.TextInputEditText
                    style="@style/edit_text.login"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16">

                <android.support.design.widget.TextInputEditText
                    style="@style/edit_text.password"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_28"
                android:layout_marginLeft="@dimen/spacing_32"
                android:layout_marginRight="@dimen/spacing_32"
                android:background="@color/login_main_txt"
                android:text="@string/login_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_18"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_gravity="center"
                android:text="@string/login_forgot_password"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
